# LoLDraft

./: .gitignore  CLAUDE.md  README.md  lol-draft-tool-prompt.md  pyproject.toml
data/: composition_features.toml
data/manual/: builds.csv  champion_stats.csv  champions.csv  matchups.csv  synergies.csv
src/draftiq/: cli.py  models.py  persistence.py
src/draftiq/draft/: rules.py  state.py
src/draftiq/providers/: base.py  cache.py  ddragon.py  manual.py  opgg.py  opgg_format.py
src/draftiq/search/: ban.py  dispatch.py  greedy.py  lookahead.py  priority.py
src/draftiq/stats/: composition.py  exposure.py  scoring.py  shrinkage.py
src/draftiq/web/: app.py  schemas.py
src/draftiq/web/static/: app.js  index.html  style.css
tests/: test_ban.py  test_composition.py  test_draft_state.py  test_e2e_cli.py  test_e2e_web.py  test_exposure.py  test_lookahead.py  test_opgg_format.py  test_opgg_provider.py  test_pool.py  test_priority.py  test_scoring.py  test_shrinkage.py
