[project]
name = "draftiq"
version = "0.1.0"
description = "League of Legends draft pick/ban recommendation tool with calibrated, explainable win-rate scoring."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
]

[project.scripts]
draftiq = "draftiq.cli:app"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
